# avslibplacebo

./: .clang-format  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
msvc/: avs_libplacebo.sln  avs_libplacebo.vcxproj  avs_libplacebo.vcxproj.filters
src/: avs_libplacebo.h  avs_libplacebo.rc  avs_libplacebo.rc.in  avslibplacebo.h  common.cpp  deband.cpp  libplDeband.cpp  plugin.cpp  resample.cpp  shader.cpp  tonemap.cpp
